--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libaal-1.0.5.tar.bz2": 7df391218b5f11e841c2a4a2dec5b6711509f3e8
+  "libaal-1.0.6.tar.gz": ee278d8c257d6887494a610123c13a76d639249c
